force-app/main/default/objects/GCAI_Prompt_Template__c/GCAI_Prompt_Template__c.object-meta.xml
<CustomObject>
    <description>AI Prompt template object store library of templates</description>
    <label>Prompt Template</label>
    <nameField>
        <label>Sample Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prompt Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>