force-app/main/default/objects/GCAI_Prompt_Template__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of actions expected from prompt to generate</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyze</fullName>
            </value>
            <value>
                <fullName>Answer</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Summarize</fullName>
            </value>
            <value>
                <fullName>Refine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>