force-app/main/default/objects/GCAI_Prompt_Template__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>Input types</description>
    <label>Input</label>
    <length>100</length>
    <type>Text</type>
</CustomField>