force-app/main/default/objects/GCAI_Prompt_Template__c/fields/IsSelected__c.field-meta.xml
<CustomField>
    <fullName>IsSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Model field used in UI component logic</description>
    <label>IsSelected</label>
    <type>Checkbox</type>
</CustomField>