force-app/main/default/objects/GCAI_Prompt_Template__c/fields/Sample_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Sample_Prompt__c</fullName>
    <description>Store example prompt</description>
    <label>Sample Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>