force-app/main/default/objects/GCAI_Prompt_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Language__c</columns>
    <columns>Input__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>